crates/daml-syntax/tests/compile_fail/coordinate_diagnostic_end_column_not_option.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/coordinate_diagnostic_end_column_not_option.rs:6:33
  |
6 |     let _: Option<CharColumn> = diagnostic.end_column();
  |            ------------------   ^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<CharColumn>`, found `DiagnosticEndColumn`
  |            |
  |            expected due to this
  |
  = note: expected enum `Option<CharColumn>`
             found enum `DiagnosticEndColumn`
